tiger.output
State 1 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | LPAREN exp_sequence RPAREN
    5    | LPAREN RPAREN
    6    | INT
    7    | STRING
    8    | MINUS exp
    9    | ID LPAREN RPAREN
   10    | ID LPAREN exp_list RPAREN
   11    | exp PLUS exp
   12    | exp MINUS exp
   13    | exp TIMES exp
   14    | exp DIVIDE exp
   15    | exp EQ exp
   16    | exp NEQ exp
   17    | exp GT exp
   18    | exp LT exp
   19    | exp GE exp
   20    | exp LE exp
   21    | exp AND exp
   22    | exp OR exp
   23    | ID LBRACE record_list RBRACE
   24    | ID LBRACE RBRACE
   25    | ID LBRACK exp RBRACK OF exp
   26    | lvalue ASSIGN exp
   27    | IF exp THEN exp
   28    | IF exp THEN exp ELSE exp
   29    | WHILE exp DO exp
   30    | FOR ID ASSIGN exp TO exp DO exp
   31    | BREAK
   32    | LET decs IN expseq END
   33    | LPAREN exp RPAREN

   34 expseq: ε
   35       | exp
   36       | exp SEMICOLON expseq

   37 record_list: ID EQ exp
   38            | ID EQ exp COMMA record_list

   39 exp_list: exp
   40         | exp COMMA exp_list

   41 exp_sequence: exp SEMICOLON exp
   42             | exp SEMICOLON exp_sequence

   43 decs: ε
   44     | dec decs

   45 dec: tydecs
   46    | vardec
   47    | fundecs

   48 tydecs: tydec
   49       | tydec tydecs

   50 tydec: TYPE ID EQ ty

   51 ty: ID
   52   | LBRACE tyfields RBRACE
   53   | ARRAY OF ID

   54 tyfields: ε
   55         | ID COLON ID
   56         | ID COLON ID COMMA tyfields

   57 vardec: VAR ID ASSIGN exp
   58       | VAR ID COLON ID ASSIGN exp

   59 fundecs: fundec
   60        | fundec fundecs

   61 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   62       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   63 lvalue: ID
   64       | lvalue DOT ID
   65       | lvalue LBRACK exp RBRACK
   66       | ID LBRACK exp RBRACK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sval> (258) 9 10 23 24 25 30 37 38 50 51 53 55 56 57 58 61 62 63 64 66
    STRING <sval> (259) 7
    INT <ival> (260) 6
    COMMA (261) 38 40 56
    COLON (262) 55 56 58 62
    SEMICOLON (263) 36 41 42
    LPAREN (264) 4 5 9 10 33 61 62
    RPAREN (265) 4 5 9 10 33 61 62
    LBRACK (266) 25 65 66
    RBRACK (267) 25 65 66
    LBRACE (268) 23 24 52
    RBRACE (269) 23 24 52
    DOT (270) 64
    PLUS (271) 11
    MINUS (272) 8 12
    TIMES (273) 13
    DIVIDE (274) 14
    EQ (275) 15 37 38 50 61 62
    NEQ (276) 16
    LT (277) 18
    LE (278) 20
    GT (279) 17
    GE (280) 19
    AND (281) 21
    OR (282) 22
    ASSIGN (283) 26 30 57 58
    ARRAY (284) 53
    IF (285) 27 28
    THEN (286) 27 28
    ELSE (287) 28
    WHILE (288) 29
    FOR (289) 30
    TO (290) 30
    DO (291) 29 30
    LET (292) 32
    IN (293) 32
    END (294) 32
    OF (295) 25 53
    BREAK (296) 31
    NIL (297) 3
    FUNCTION (298) 61 62
    VAR (299) 57 58
    TYPE (300) 50
    UMINUS (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program <exp> (48)
        on left: 1
        on right: 0
    exp <exp> (49)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 1 8 11 12 13 14 15 16 17 18 19 20 21 22 25 26 27 28 29 30 33 35 36 37 38 39 40 41 42 57 58 61 62 65 66
    expseq <exp_list> (50)
        on left: 34 35 36
        on right: 32 36
    record_list <record_list> (51)
        on left: 37 38
        on right: 23 38
    exp_list <exp_list> (52)
        on left: 39 40
        on right: 10 40
    exp_sequence <exp_list> (53)
        on left: 41 42
        on right: 4 42
    decs <decs> (54)
        on left: 43 44
        on right: 32 44
    dec <dec> (55)
        on left: 45 46 47
        on right: 44
    tydecs <tydecs> (56)
        on left: 48 49
        on right: 45 49
    tydec <tydec> (57)
        on left: 50
        on right: 48 49
    ty <ty> (58)
        on left: 51 52 53
        on right: 50
    tyfields <tyfields> (59)
        on left: 54 55 56
        on right: 52 56 61 62
    vardec <dec> (60)
        on left: 57 58
        on right: 46
    fundecs <fundecs> (61)
        on left: 59 60
        on right: 47 60
    fundec <fundec> (62)
        on left: 61 62
        on right: 59 60
    lvalue <var> (63)
        on left: 63 64 65 66
        on right: 2 26 64 65


State 0

    0 $accept: • program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    exp      go to state 13
    lvalue   go to state 14


State 1

    9 exp: ID • LPAREN RPAREN
   10    | ID • LPAREN exp_list RPAREN
   23    | ID • LBRACE record_list RBRACE
   24    | ID • LBRACE RBRACE
   25    | ID • LBRACK exp RBRACK OF exp
   63 lvalue: ID •
   66       | ID • LBRACK exp RBRACK

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    LBRACK    [reduce using rule 63 (lvalue)]
    $default  reduce using rule 63 (lvalue)


State 2

    7 exp: STRING •

    $default  reduce using rule 7 (exp)


State 3

    6 exp: INT •

    $default  reduce using rule 6 (exp)


State 4

    4 exp: LPAREN • exp_sequence RPAREN
    5    | LPAREN • RPAREN
   33    | LPAREN • exp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 18
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp           go to state 19
    exp_sequence  go to state 20
    lvalue        go to state 14


State 5

    8 exp: MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 21
    lvalue  go to state 14


State 6

   27 exp: IF • exp THEN exp
   28    | IF • exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 22
    lvalue  go to state 14


State 7

   29 exp: WHILE • exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 23
    lvalue  go to state 14


State 8

   30 exp: FOR • ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 24


State 9

   32 exp: LET • decs IN expseq END

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 43 (decs)

    decs     go to state 28
    dec      go to state 29
    tydecs   go to state 30
    tydec    go to state 31
    vardec   go to state 32
    fundecs  go to state 33
    fundec   go to state 34


State 10

   31 exp: BREAK •

    $default  reduce using rule 31 (exp)


State 11

    3 exp: NIL •

    $default  reduce using rule 3 (exp)


State 12

    0 $accept: program • $end

    $end  shift, and go to state 35


State 13

    1 program: exp •
   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 1 (program)


State 14

    2 exp: lvalue •
   26    | lvalue • ASSIGN exp
   64 lvalue: lvalue • DOT ID
   65       | lvalue • LBRACK exp RBRACK

    LBRACK  shift, and go to state 48
    DOT     shift, and go to state 49
    ASSIGN  shift, and go to state 50

    $default  reduce using rule 2 (exp)


State 15

    9 exp: ID LPAREN • RPAREN
   10    | ID LPAREN • exp_list RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 51
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp       go to state 52
    exp_list  go to state 53
    lvalue    go to state 14


State 16

   25 exp: ID LBRACK • exp RBRACK OF exp
   66 lvalue: ID LBRACK • exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 54
    lvalue  go to state 14


State 17

   23 exp: ID LBRACE • record_list RBRACE
   24    | ID LBRACE • RBRACE

    ID      shift, and go to state 55
    RBRACE  shift, and go to state 56

    record_list  go to state 57


State 18

    5 exp: LPAREN RPAREN •

    $default  reduce using rule 5 (exp)


State 19

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp
   33    | LPAREN exp • RPAREN
   41 exp_sequence: exp • SEMICOLON exp
   42             | exp • SEMICOLON exp_sequence

    SEMICOLON  shift, and go to state 58
    RPAREN     shift, and go to state 59
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    TIMES      shift, and go to state 38
    DIVIDE     shift, and go to state 39
    EQ         shift, and go to state 40
    NEQ        shift, and go to state 41
    LT         shift, and go to state 42
    LE         shift, and go to state 43
    GT         shift, and go to state 44
    GE         shift, and go to state 45
    AND        shift, and go to state 46
    OR         shift, and go to state 47


State 20

    4 exp: LPAREN exp_sequence • RPAREN

    RPAREN  shift, and go to state 60


State 21

    8 exp: MINUS exp •
   11    | exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    $default  reduce using rule 8 (exp)


State 22

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp
   27    | IF exp • THEN exp
   28    | IF exp • THEN exp ELSE exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    THEN    shift, and go to state 61


State 23

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp
   29    | WHILE exp • DO exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    DO      shift, and go to state 62


State 24

   30 exp: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 63


State 25

   61 fundec: FUNCTION • ID LPAREN tyfields RPAREN EQ exp
   62       | FUNCTION • ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 64


State 26

   57 vardec: VAR • ID ASSIGN exp
   58       | VAR • ID COLON ID ASSIGN exp

    ID  shift, and go to state 65


State 27

   50 tydec: TYPE • ID EQ ty

    ID  shift, and go to state 66


State 28

   32 exp: LET decs • IN expseq END

    IN  shift, and go to state 67


State 29

   44 decs: dec • decs

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 43 (decs)

    decs     go to state 68
    dec      go to state 29
    tydecs   go to state 30
    tydec    go to state 31
    vardec   go to state 32
    fundecs  go to state 33
    fundec   go to state 34


State 30

   45 dec: tydecs •

    $default  reduce using rule 45 (dec)


State 31

   48 tydecs: tydec •
   49       | tydec • tydecs

    TYPE  shift, and go to state 27

    TYPE      [reduce using rule 48 (tydecs)]
    $default  reduce using rule 48 (tydecs)

    tydecs  go to state 69
    tydec   go to state 31


State 32

   46 dec: vardec •

    $default  reduce using rule 46 (dec)


State 33

   47 dec: fundecs •

    $default  reduce using rule 47 (dec)


State 34

   59 fundecs: fundec •
   60        | fundec • fundecs

    FUNCTION  shift, and go to state 25

    FUNCTION  [reduce using rule 59 (fundecs)]
    $default  reduce using rule 59 (fundecs)

    fundecs  go to state 70
    fundec   go to state 34


State 35

    0 $accept: program $end •

    $default  accept


State 36

   11 exp: exp PLUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 71
    lvalue  go to state 14


State 37

   12 exp: exp MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 72
    lvalue  go to state 14


State 38

   13 exp: exp TIMES • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 73
    lvalue  go to state 14


State 39

   14 exp: exp DIVIDE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 74
    lvalue  go to state 14


State 40

   15 exp: exp EQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 75
    lvalue  go to state 14


State 41

   16 exp: exp NEQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 76
    lvalue  go to state 14


State 42

   18 exp: exp LT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 77
    lvalue  go to state 14


State 43

   20 exp: exp LE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 78
    lvalue  go to state 14


State 44

   17 exp: exp GT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 79
    lvalue  go to state 14


State 45

   19 exp: exp GE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 80
    lvalue  go to state 14


State 46

   21 exp: exp AND • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 81
    lvalue  go to state 14


State 47

   22 exp: exp OR • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 82
    lvalue  go to state 14


State 48

   65 lvalue: lvalue LBRACK • exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 83
    lvalue  go to state 14


State 49

   64 lvalue: lvalue DOT • ID

    ID  shift, and go to state 84


State 50

   26 exp: lvalue ASSIGN • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 85
    lvalue  go to state 14


State 51

    9 exp: ID LPAREN RPAREN •

    $default  reduce using rule 9 (exp)


State 52

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp
   39 exp_list: exp •
   40         | exp • COMMA exp_list

    COMMA   shift, and go to state 86
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 39 (exp_list)


State 53

   10 exp: ID LPAREN exp_list • RPAREN

    RPAREN  shift, and go to state 87


State 54

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp
   25    | ID LBRACK exp • RBRACK OF exp
   66 lvalue: ID LBRACK exp • RBRACK

    RBRACK  shift, and go to state 88
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47


State 55

   37 record_list: ID • EQ exp
   38            | ID • EQ exp COMMA record_list

    EQ  shift, and go to state 89


State 56

   24 exp: ID LBRACE RBRACE •

    $default  reduce using rule 24 (exp)


State 57

   23 exp: ID LBRACE record_list • RBRACE

    RBRACE  shift, and go to state 90


State 58

   41 exp_sequence: exp SEMICOLON • exp
   42             | exp SEMICOLON • exp_sequence

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp           go to state 91
    exp_sequence  go to state 92
    lvalue        go to state 14


State 59

   33 exp: LPAREN exp RPAREN •

    $default  reduce using rule 33 (exp)


State 60

    4 exp: LPAREN exp_sequence RPAREN •

    $default  reduce using rule 4 (exp)


State 61

   27 exp: IF exp THEN • exp
   28    | IF exp THEN • exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 93
    lvalue  go to state 14


State 62

   29 exp: WHILE exp DO • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 94
    lvalue  go to state 14


State 63

   30 exp: FOR ID ASSIGN • exp TO exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 95
    lvalue  go to state 14


State 64

   61 fundec: FUNCTION ID • LPAREN tyfields RPAREN EQ exp
   62       | FUNCTION ID • LPAREN tyfields RPAREN COLON ID EQ exp

    LPAREN  shift, and go to state 96


State 65

   57 vardec: VAR ID • ASSIGN exp
   58       | VAR ID • COLON ID ASSIGN exp

    COLON   shift, and go to state 97
    ASSIGN  shift, and go to state 98


State 66

   50 tydec: TYPE ID • EQ ty

    EQ  shift, and go to state 99


State 67

   32 exp: LET decs IN • expseq END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 34 (expseq)

    exp     go to state 100
    expseq  go to state 101
    lvalue  go to state 14


State 68

   44 decs: dec decs •

    $default  reduce using rule 44 (decs)


State 69

   49 tydecs: tydec tydecs •

    $default  reduce using rule 49 (tydecs)


State 70

   60 fundecs: fundec fundecs •

    $default  reduce using rule 60 (fundecs)


State 71

   11 exp: exp • PLUS exp
   11    | exp PLUS exp •
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    $default  reduce using rule 11 (exp)


State 72

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   12    | exp MINUS exp •
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    $default  reduce using rule 12 (exp)


State 73

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   13    | exp TIMES exp •
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    $default  reduce using rule 13 (exp)


State 74

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   14    | exp DIVIDE exp •
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    $default  reduce using rule 14 (exp)


State 75

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   15    | exp EQ exp •
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 15 (exp)


State 76

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   16    | exp NEQ exp •
   17    | exp • GT exp
   18    | exp • LT exp
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 16 (exp)


State 77

   11 exp: exp • PLUS exp
   12    | exp • MINUS exp
   13    | exp • TIMES exp
   14    | exp • DIVIDE exp
   15    | exp • EQ exp
   16    | exp • NEQ exp
   17    | exp • GT exp
   18    | exp • LT exp
   18    | exp LT exp •
   19    | exp • GE exp
   20    | exp • LE exp
   21    | exp • AND exp
   22    | exp • OR exp
